@@ -6,6 +6,13 @@ include("atf-c/Kyuafile")
 include("atf-c++/Kyuafile")
 include("atf-sh/Kyuafile")
 include("test-programs/Kyuafile")
-include("atf-config/Kyuafile")
-include("atf-report/Kyuafile")
-include("atf-run/Kyuafile")
+
+if fs.exists("atf-config/Kyuafile") then
+   include("atf-config/Kyuafile")
+end
+if fs.exists("atf-report/Kyuafile") then
+   include("atf-report/Kyuafile")
+end
+if fs.exists("atf-run/Kyuafile") then
+   include("atf-run/Kyuafile")
+end
