@@ -68,14 +68,17 @@ m4_define(CHECK_TPS_TCR,
           [ignore], [])])
 
 dnl The tests below are sorted depending on how important they are.
-m4_include(bootstrap/t_application_opts_args.at)
-m4_include(bootstrap/t_application_help.at)
 m4_include(bootstrap/t_test_program_filter.at)
 m4_include(bootstrap/t_test_program_run.at)
 m4_include(bootstrap/t_test_program_list.at)
-m4_include(bootstrap/t_atf_config.at)
-m4_include(bootstrap/t_atf_run.at)
 m4_include(bootstrap/t_test_program_compare.at)
 m4_include(bootstrap/t_subr_atf_check.at)
+
+m4_if([ENABLE_TOOLS], yes, [
+    m4_include(bootstrap/t_application_opts_args.at)
+    m4_include(bootstrap/t_application_help.at)
+    m4_include(bootstrap/t_atf_config.at)
+    m4_include(bootstrap/t_atf_run.at)
+])
 
 dnl vim: syntax=m4:expandtab:shiftwidth=4:softtabstop=4
